--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   image_picker: ^1.0.7
   firebase_auth: ^4.17.6
   firebase_storage: ^11.6.7
-
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
