--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^4.17.6
   firebase_storage: ^11.6.7
   flutter_svg: ^2.0.10+1
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
